k8s/overlays/prod/argocd-ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-ingress-service
  labels:
    name: argocd-ingress-service
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.smithmilner.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 443
